removed the cloudFront

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,12 +138,14 @@ jobs:
         run: |
           aws s3 sync client/dist/ s3://${{ secrets.S3_BUCKET_NAME }} --delete
 
-      - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+      # CloudFront cache invalidation (optional)
+      # Uncomment and add CLOUDFRONT_DISTRIBUTION_ID secret if using CloudFront
+      # - name: Invalidate CloudFront cache
+      #   if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
+      #   run: |
+      #     aws cloudfront create-invalidation \
+      #       --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+      #       --paths "/*"
 
   # Health Check
   health-check:
