--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd ${{ secrets.EC2_APP_PATH }} &&
+            git stash &&
             git pull origin main &&
+            git stash pop || true &&
             npm ci --only=production &&
             pm2 restart gifted-giving-backend || pm2 start index.js --name gifted-giving-backend &&
             pm2 save
