--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,14 +141,17 @@ jobs:
         run: |
           aws s3 sync client/dist/ s3://${{ secrets.S3_BUCKET_NAME }} --delete
 
-      # CloudFront cache invalidation (optional)
-      # Uncomment and add CLOUDFRONT_DISTRIBUTION_ID secret if using CloudFront
-      # - name: Invalidate CloudFront cache
-      #   if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
-      #   run: |
-      #     aws cloudfront create-invalidation \
-      #       --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-      #       --paths "/*"
+      - name: Invalidate CloudFront cache
+        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        run: |
+          echo "Invalidating CloudFront cache..."
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+            --paths "/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
 
   # Health Check
   health-check:
